--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -25,6 +25,8 @@
       </div>
     <% end %>
     <div class="record-pane">
+      <%= link_to_help :topic => "search" %>
+
       <h2><%= I18n.t("accession._plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
