--- a/frontend/app/views/classification_terms/_form_container.html.erb
+++ b/frontend/app/views/classification_terms/_form_container.html.erb
@@ -1,3 +1,5 @@
+<%= link_to_help :topic => "classification" %>
+
 <h2>
   <%= @classification_term.title.blank? ? I18n.t("classification_term._singular") : @classification_term.title %>
   <span class="label label-info"><%= I18n.t("classification_term._singular") %></span>
