--- a/frontend/app/views/collection_management/index.html.erb
+++ b/frontend/app/views/collection_management/index.html.erb
@@ -11,6 +11,7 @@ add_column(I18n.t("collection_management.processing_hours_total_short"), proc {|
   </div>
   <div class="span9">
     <div class="record-pane">
+      <%= link_to_help :topic => "search" %>
 
       <h2><%= I18n.t("collection_management._plural") %></h2>
 
