--- a/frontend/app/views/locations/index.html.erb
+++ b/frontend/app/views/locations/index.html.erb
@@ -21,6 +21,8 @@
     <% end %>
 
     <div class="record-pane">
+      <%= link_to_help :topic => "search" %>
+
       <h2><%= I18n.t("location._plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
