--- a/frontend/app/views/notes/_form.html.erb
+++ b/frontend/app/views/notes/_form.html.erb
@@ -1,8 +1,13 @@
 <%= render :partial => "notes/template" %>
 
-<section id="notes" class="subrecord-form">
+<%
+  section_id = "notes" if section_id.blank?
+%>
+
+<section id="<%= section_id %>" class="subrecord-form">
   <h3 class="subrecord-form-heading">
     <%= wrap_with_tooltip(I18n.t("note._plural"), "#{form.i18n_for('notes')}_tooltip", "subrecord-form-heading-label") %>
+    <%= link_to_help :topic => "#{form['jsonmodel_type']}_notes" %>
     <button class="btn btn-small pull-right"><%= I18n.t("note._frontend.action.add") %></button>
   </h3>
   <div class="subrecord-form-container">
