--- a/frontend/app/views/repositories/index.html.erb
+++ b/frontend/app/views/repositories/index.html.erb
@@ -18,6 +18,8 @@
     <% end %>
 
     <div class="record-pane">
+      <%= link_to_help :topic => "repository" %>
+
       <h2><%= I18n.t("repository._plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
