--- a/frontend/app/views/search/_results.html.erb
+++ b/frontend/app/views/search/_results.html.erb
@@ -8,6 +8,7 @@
   </div>
   <div class="span9">
     <div class="record-pane">
+      <%= link_to_help :topic => "search" %>
       <% if !params[:linker] %>
         <h2><%= title %></h2>
       <% end %>
