--- a/frontend/app/views/agents/edit.html.erb
+++ b/frontend/app/views/agents/edit.html.erb
@@ -9,6 +9,7 @@
       <div class="span9">
         <%= render :partial => "toolbar" %>
         <div class="record-pane">
+          <%= link_to_help :topic => "#{@agent.agent_type}" %>
           <h2><%= @agent.names[0]["sort_name"] %>  <span class="label label-info"><%= I18n.t("agent._singular") %></span></h2>
           <%= render :partial => "agents/form", :locals => {:form => form} %>
           <div class="form-actions">
