--- a/frontend/app/views/classifications/_form_container.html.erb
+++ b/frontend/app/views/classifications/_form_container.html.erb
@@ -1,3 +1,5 @@
+<%= link_to_help :topic => "classification" %>
+
 <h2>
    <%= @classification.title.blank? ? "#{I18n.t("actions.new_prefix")} #{I18n.t("classification._singular")}" : @classification.title %>  <span class="label label-info"><%= I18n.t("classification._singular") %></span>
 </h2>
