--- a/frontend/app/views/classifications/index.html.erb
+++ b/frontend/app/views/classifications/index.html.erb
@@ -25,6 +25,8 @@
      <% end %>
 
      <div class="record-pane">
+       <%= link_to_help :topic => "search" %>
+
        <h2><%= I18n.t("classification._plural") %></h2>
 
        <%= render :partial => "shared/flash_messages" %>
