--- a/frontend/app/views/digital_objects/new.html.erb
+++ b/frontend/app/views/digital_objects/new.html.erb
@@ -10,6 +10,7 @@
         <div class="span9">
           <%= render :partial => "shared/toolbar_new_records" %>
           <div class="record-pane" id="object_container">
+            <%= link_to_help :topic => "digital_object" %>
             <h2>
               <%= @digital_object.title.blank? ? I18n.t("digital_object._singular") : @digital_object.title %>
               <span class="label label-info"><%= I18n.t("digital_object._singular") %></span>
