--- a/frontend/app/views/enumerations/index.html.erb
+++ b/frontend/app/views/enumerations/index.html.erb
@@ -3,6 +3,7 @@
 <div class="row-fluid">
   <div class="span12">
     <div class="record-pane">
+      <%= link_to_help :topic => "enumeration" %>
 
       <%= render :partial => "shared/flash_messages" %>
 
