--- a/frontend/app/views/events/index.html.erb
+++ b/frontend/app/views/events/index.html.erb
@@ -40,6 +40,8 @@
     <% end %>
 
     <div class="record-pane">
+      <%= link_to_help :topic => "search" %>
+
       <h2><%= I18n.t("event._plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
