--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -16,6 +16,8 @@
     </div>
 
     <div class="record-pane">
+      <%= link_to_help :topic => "repository_groups" %>
+
      <h2><%= I18n.t("group._plural") %></h2>
 
      <table class="table table-striped table-bordered table-condensed">
