--- a/frontend/app/views/locations/edit.html.erb
+++ b/frontend/app/views/locations/edit.html.erb
@@ -8,6 +8,7 @@
       </div>
       <div class="span9">
         <div class="record-pane">
+          <%= link_to_help :topic => "location" %>
           <h2><%= @location.title %>  <span class="label label-info"><%= I18n.t("location._singular") %></span></h2>
           <br/>
           <%= render :partial => "shared/form_messages", :locals => {:object => @subject, :form => form} %>
