--- a/frontend/app/views/locations/new.html.erb
+++ b/frontend/app/views/locations/new.html.erb
@@ -8,6 +8,7 @@
       </div>
       <div class="span9">
         <div class="record-pane">
+          <%= link_to_help :topic => "location" %>
           <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("location._singular") %>  <span class="label label-info"><%= I18n.t("location._singular") %></span></h2>
           <br/>
 
