--- a/frontend/app/views/repositories/edit.html.erb
+++ b/frontend/app/views/repositories/edit.html.erb
@@ -8,6 +8,7 @@
       </div>
       <div class="span9">
         <div class="record-pane">
+          <%= link_to_help :topic => "repository" %>
           <h2><%= @repository.repository['name'] %>  <span class="label label-info"><%= I18n.t("repository._singular") %></span></h2>
           <br/>
 
