--- a/frontend/app/views/repositories/new.html.erb
+++ b/frontend/app/views/repositories/new.html.erb
@@ -9,6 +9,7 @@
       <div class="span9">
         <%= render :partial => "shared/toolbar_new_records" %>
         <div class="record-pane">
+          <%= link_to_help :topic => "repository" %>
           <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("repository._singular") %>  <span class="label label-info"><%= I18n.t("repository._singular") %></span></h2>
           <br/>
           <%= render :partial => "repositories/form_container", :locals => {:form => form} %>
