--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -9,6 +9,7 @@
       <div class="span9">
         <%= render :partial => "toolbar" %>
         <div class="record-pane">
+          <%= link_to_help :topic => "subject" %>
           <h2><%= @subject.title %>  <span class="label label-info"><%= I18n.t("subject._singular") %></span></h2>
           <br/>
           <%= render :partial => "subjects/form", :locals => {:form => form} %>
