--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -26,6 +26,8 @@
     <% end %>
 
     <div class="record-pane">
+      <%= link_to_help :topic => "search" %>
+
       <h2><%= I18n.t("subject._plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
