--- a/frontend/app/views/users/new.html.erb
+++ b/frontend/app/views/users/new.html.erb
@@ -6,6 +6,7 @@
    <div class="span12">
      <%= render :partial => "toolbar" %>
      <div class="record-pane">
+       <% if session['user'] %><%= link_to_help :topic => "user" %><% end %>
        <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("user._frontend.section.account") %></h2>
        <%= form_context :user, @user do |form| %>
          <%= render :partial => "users/form", :locals => {:form => form} %>
