--- a/frontend/app/views/events/_toolbar.html.erb
+++ b/frontend/app/views/events/_toolbar.html.erb
@@ -2,6 +2,14 @@
   <div class="row-fluid">
     <div class="span12">
       <div class="record-toolbar">
+        <% if not @event.suppressed %>
+          <% if !['edit', 'update'].include?(controller.action_name) %>
+            <div class="btn-group pull-left">
+              <%= link_to I18n.t("actions.edit"), {:controller => :events, :action => :edit, :id => @event.id}, :class => "btn btn-small btn-primary" %>
+            </div>
+          <% end %>
+        <% end %>
+
         <div class="btn-toolbar pull-right">
           <div class="btn-group">
             <div class="btn btn-inline-form">
