--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -1,3 +1,5 @@
+<%= link_to_help :topic => "archival_object" %>
+
 <h2>
   <%= @archival_object.label.blank? ? I18n.t("archival_object._singular") : @archival_object.label %>
   <span class="label label-info"><%= I18n.t("archival_object._singular") %></span>
@@ -13,7 +15,10 @@
 
   <% define_template("archival_object", jsonmodel_definition(:archival_object)) do |form| %>
     <section id="basic_information">
-      <h3><%= I18n.t("archival_object._frontend.section.basic_information") %></h3>
+      <h3>
+        <%= I18n.t("archival_object._frontend.section.basic_information") %>
+        <%= link_to_help :topic => "archival_object_basic_information" %>
+      </h3>
 
       <fieldset>
         <%= form.label_and_textarea("title", :required => :conditionally)%>
