--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -1,3 +1,5 @@
+<%= link_to_help :topic => "digital_object_component" %>
+
 <h2>
   <%= @digital_object_component.title.blank? ? I18n.t("digital_object_component._singular") : @digital_object_component.title %>
   <span class="label label-info"><%= I18n.t("digital_object_component._singular") %></span>
@@ -14,7 +16,10 @@
 
   <% define_template("digital_object_component", jsonmodel_definition(:digital_object_component)) do |form| %>
     <section id="basic_information">
-      <h3><%= I18n.t("digital_object_component._frontend.section.basic_information") %></h3>
+      <h3>
+        <%= I18n.t("digital_object_component._frontend.section.basic_information") %>
+        <%= link_to_help :topic => "digital_object_component_basic_information" %>
+      </h3>
       <%= form.label_and_textfield "label" %>
       <%= form.label_and_textarea "title" %>
       <%= form.label_and_textfield "component_id" %>
