Frontend changes for transferring accessions.

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -479,16 +479,18 @@ div.progress-container {
   }
 }
 
-.merge-form {
+.transfer-form, .merge-form {
   padding: 10px;
 
   .controls {
     margin-left: 0;
+    clear: both;
   }
   .control-label {
-    width: 80%;
+    width: 100%;
     text-align: left;
     margin-left: 0;
+    
   }
   form {
     margin: 0;
