--- a/frontend/app/views/shared/_merge_dropdown.html.erb
+++ b/frontend/app/views/shared/_merge_dropdown.html.erb
@@ -28,7 +28,7 @@
                                      :"data-confirm-btn-class" => "btn"
                                    })
           %>
-          <a class="btn pull-right" href="#"><%= I18n.t("actions.cancel") %></a>
+          <a class="btn btn-cancel pull-right" href="#"><%= I18n.t("actions.cancel") %></a>
         </div>
         <% end %>
       <% end %>
