Changes for resource transfers

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -11,7 +11,7 @@
 //= require form
 //= require rde
 //= require merge_dropdown
-
+//= require transfer_dropdown
 
 $(function() {
   $.fn.init_resource_form = function() {
