--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -80,6 +80,7 @@
     </h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_singlepart") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("label") %>
       <%= form.label_and_select("type",
           singlepart_notes.sort_by {|value, hash| hash[:i18n]}.map {|value, hash| [hash[:i18n], value]},
@@ -96,6 +97,7 @@
     <h4 class="subrecord-form-heading"><%= I18n.t("note.note_orderedlist") %></h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_orderedlist") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("title") %>
       <%= form.label_and_select("enumeration", form.possible_options_for("enumeration", true)) %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
@@ -155,6 +157,7 @@
     </h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_multipart") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("label") %>
       <%= form.label_and_select("type",
           multipart_notes.map {|value, hash| [hash[:i18n], value]},
@@ -213,6 +216,7 @@
     </h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_bioghist") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("label") %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
 
@@ -252,6 +256,7 @@
     <h4 class="subrecord-form-heading"><%= I18n.t("note.note_citation") %></h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_citation") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
 
       <% form.emit_template("content_items", :required => form.required?('content')) %>
@@ -274,6 +279,7 @@
     <h4 class="subrecord-form-heading"><%= I18n.t("note.note_abstract") %></h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_abstract") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
 
       <% form.emit_template("content_items", :required => form.required?('content')) %>
@@ -315,6 +321,7 @@
     <h4 class="subrecord-form-heading"><%= I18n.t("note.note_outline") %></h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_outline") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
 
       <div class="control-group">
@@ -338,6 +345,7 @@
     <h4 class="subrecord-form-heading"><%= I18n.t("note.note_definedlist") %></h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_definedlist") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("title") %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
 
@@ -370,6 +378,7 @@
     <h4 class="subrecord-form-heading"><%= I18n.t("note.note_index") %></h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_index") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("label") %>
       <% form.emit_template("content_items", :required => form.required?('content')) %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
@@ -406,6 +415,7 @@
     <h4 class="subrecord-form-heading"><%= I18n.t("note.note_chronology") %></h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_chronology") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("title") %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
 
@@ -456,6 +466,7 @@
     <h4 class="subrecord-form-heading"><%= I18n.t("note.note_bibliography") %></h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_bibliography") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("label") %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
 
@@ -495,6 +506,7 @@
     </h4>
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_digital_object") %>
+      <%= form.hidden_input("ingest_problem") %>
       <%= form.label_and_textfield("label") %>
       <%= form.label_and_select("type", digital_object_note_types.map {|value, hash| [hash[:i18n], value]}, :field_opts => {:class => "note-type"}) %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
@@ -528,6 +540,7 @@
         </div>
       <% else %>
         <%= form.hidden_input(:jsonmodel_type, "note_text") %>
+        <%= form.hidden_input("ingest_problem") %>
 
         <%= form.label_and_textarea('content', :field_opts => {:class => "mixed-content"}) %>
 
