--- a/frontend/app/views/repositories/_toolbar.html.erb
+++ b/frontend/app/views/repositories/_toolbar.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid">
   <div class="span12">
     <div class="record-toolbar">
-      <% if user_can?('create_repository') %>
+      <%  if user_can?('create_repository') && !['edit', 'update'].include?(controller.action_name) %>
         <div class="btn-group pull-left">
           <%= link_to I18n.t("actions.edit"), {:controller => :repositories, :action => :edit, :id => @repository.id}, :class => "btn btn-small btn-primary" %>
         </div>
@@ -12,8 +12,7 @@
             <button type="submit" class="btn btn-small btn-success"><%= I18n.t("repository._frontend.action.select") %></button>
           <% end %>
         <% end %>
-        <%# Repository deletion is disabled for the time being until the semantics we want are fully worked out. %>
-        <% if false && user_can?('delete_repository') %>
+        <% if user_can?('delete_repository') %>
           <div class="btn-group">
             <div class="btn btn-inline-form">
               <%= button_delete_action url_for(:controller => :repositories, :action => :delete, :id => @repository.id) %>
