--- a/frontend/app/views/repositories/edit.html.erb
+++ b/frontend/app/views/repositories/edit.html.erb
@@ -7,6 +7,7 @@
         <%= render :partial => "repositories/sidebar" %>
       </div>
       <div class="span9">
+        <%= render :partial => "repositories/toolbar" %>
         <div class="record-pane">
           <%= link_to_help :topic => "repository" %>
           <h2><%= @repository.repository['name'] %>  <span class="label label-info"><%= I18n.t("repository._singular") %></span></h2>
