--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -127,7 +127,7 @@
                       <li><%= link_to I18n.t("navbar.manage_groups"), :controller => :groups, :action => :index %></li>
                       <li><%= link_to I18n.t("user._frontend.section.manage_access"), :controller => :users, :action => :manage_access %></li>
                     <% end %>
-                    <% if user_can?('transfer_repository') %>
+                    <% if user_can?('transfer_repository') && @repositories.length > 1 %>
                       <li><%= link_to I18n.t("repository._frontend.section.transfer"), :controller => :repositories, :action => :transfer, :id => session[:repo_id] %></li>
                     <% end %>
                   </ul>
