--- a/frontend/app/views/related_agents/_form.html.erb
+++ b/frontend/app/views/related_agents/_form.html.erb
@@ -3,7 +3,7 @@
 <% @agent_type = form['agent_type'] %>
 <% define_template "related_agents_#{@agent_type}", jsonmodel_definition(@agent_type.intern) do |form|  %>
 
-<section id="<%= @agent_type %>_related_agents" class="subrecord-form">
+<section id="<%= @agent_type %>_related_agents" class="subrecord-form related-agents-form">
   <h3 class="subrecord-form-heading">
     <%= I18n.t("related_agent._plural") %>
     <%= link_to_help :topic => "#{@agent_type}_related_agents" %>
