--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -34,6 +34,8 @@
         <%= form.label_and_textfield "other_level", :required => true %>
         <%= form.label_and_select "language", form.possible_options_for("language", true) %>
         <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
+        <%= form.label_and_boolean "restrictions_apply", {}, form.default_for("restrictions_apply") %>
+        <%= form.label_and_textarea "repository_processing_note" %>
       </fieldset>
     </section>
   <% end %>
