comment out EAC downlaod button

--- a/frontend/app/views/agents/_toolbar.html.erb
+++ b/frontend/app/views/agents/_toolbar.html.erb
@@ -44,9 +44,11 @@
             </div>
           <% end %>
 
-          <div class="btn-group">
-            <%= link_to I18n.t("actions.export_eac"), {:controller => :exports, :action => :download_eac, :id => @agent.id, :type => @agent.agent_type}, :class => "btn btn-small" %>
-          </div>
+          <% if false %>
+            <div class="btn-group">
+              <%= link_to I18n.t("actions.export_eac"), {:controller => :exports, :action => :download_eac, :id => @agent.id, :type => @agent.agent_type}, :class => "btn btn-small" %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
