Show component summarys for children on Archival object pages (public app); And truncate the titles in the breadcrumb as some get really looooooooooong;

--- a/public/app/views/records/archival_object.html.erb
+++ b/public/app/views/records/archival_object.html.erb
@@ -37,7 +37,7 @@
                  :locals => {
                    :archival_object => @archival_object,
                    :show_components => true,
-                   :show_full_component => false
+                   :show_full_component => true
                  } %>
 
       <br/>
