--- a/public/app/views/site/_breadcrumb.html.erb
+++ b/public/app/views/site/_breadcrumb.html.erb
@@ -6,10 +6,10 @@
           <% if i < @breadcrumbs.length - 1%>
             <li>
               <%= icon_for crumb[2] %> 
-              <%= link_to crumb[0], crumb[1] %><span class="divider">/</span>
+              <%= link_to truncate(crumb[0]), crumb[1] %><span class="divider">/</span>
             </li>
           <% else %>
-            <li class="active"><%= icon_for crumb[2] %> <%= crumb[0] %></li>
+            <li class="active"><%= icon_for crumb[2] %> <%= truncate(crumb[0]) %></li>
           <% end %>
         <% end %>
       </ul>
